fixed slider on small device

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -601,3 +601,6 @@ select:not([size]) {
   text-align: justify;
   text-justify: inter-word;
 }
+.swiper-pagination-bullet-active {
+  background: #ff693b !important;
+}
